update about me

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Your Name
-email: your.email@example.com
+title: Jan Kaul 
+email: jankaul@mailbox.org
 description: >-
   Personal website featuring my projects, blog posts, and talks.
 baseurl: "" # the subpath of your site, e.g. /blog
